--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>mi proyecto</title>
 </head>
 <body>
+
+    
+    
     <h1>ejercicio</h1>
-    <p id="variable">nuestra variable:</p>
+
+    <br>
+
+    <p id="var_Texto">variable tipo Texto:</p>
+    <br>
+    <p id="var_Entera">variable tipo Entero:</p>
+    <br>
+    <p id="var_Booleana">Variable tipo Booleana:</p>
+
+
     <script src="./codigo.js"></script>
 </body>
 </html>
